# transaction_analysis_application

./: .env_template  README.md  config.py  pyproject.toml
data/: report.json
logs/: logs.txt
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_utils.py  test_views.py
